// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSkeletonText is rendered 1`] = `
<span
  aria-busy="true"
  aria-label="aria-label"
  class="euiSkeletonText testClass1 testClass2"
  data-test-subj="test subject string"
  role="progressbar"
>
  <span
    class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
  />
  <span
    class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
  />
  <span
    class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
  />
</span>
`;

exports[`EuiSkeletonText size m 1`] = `
<span
  aria-busy="true"
  aria-label="Loading"
  class="euiSkeletonText"
  role="progressbar"
>
  <span
    class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
  />
  <span
    class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
  />
  <span
    class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-m"
  />
</span>
`;

exports[`EuiSkeletonText size relative 1`] = `
<span
  aria-busy="true"
  aria-label="Loading"
  class="euiSkeletonText"
  role="progressbar"
>
  <span
    class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-relative"
  />
  <span
    class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-relative"
  />
  <span
    class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-relative"
  />
</span>
`;

exports[`EuiSkeletonText size s 1`] = `
<span
  aria-busy="true"
  aria-label="Loading"
  class="euiSkeletonText"
  role="progressbar"
>
  <span
    class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-s"
  />
  <span
    class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-s"
  />
  <span
    class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-s"
  />
</span>
`;

exports[`EuiSkeletonText size xs 1`] = `
<span
  aria-busy="true"
  aria-label="Loading"
  class="euiSkeletonText"
  role="progressbar"
>
  <span
    class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-xs"
  />
  <span
    class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-xs"
  />
  <span
    class="emotion-euiSkeletonGradientAnimation-euiSkeletonText-xs"
  />
</span>
`;
